# databricks-ecommerce-pipeline

./: .pre-commit-config.yaml  Makefile  README.md  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
Notebook/: 01_bronze_ingestion.ipynb  02_silver_transformations.ipynb  03_gold_aggregations.ipynb  04_delta_lake_deep_dive.ipynb  05_workflows_and_dlt.ipynb
databricks/: permissions.sql
docs/: architecture.md  runbook.md
notebooks/: 01_bronze_ingestion.py  02_silver_transformations.py  03_gold_aggregations.py  05_pipeline_runner.py
src/: __init__.py
src/bronze/: __init__.py  ingestion.py
src/config/: __init__.py  schemas.py  settings.py
src/config/environments/: dev.yaml  prod.yaml  staging.yaml
src/delta_ops/: __init__.py
src/dlt/: dlt_pipeline.py
src/gold/: __init__.py  category_trend.py  clv.py  pipeline.py  revenue.py  seller_scorecard.py
src/orchestration/: __init__.py  metrics.py  validators.py
src/silver/: __init__.py  transformations.py
src/utils/: helpers.py
tests/: conftest.py
tests/unit/: test_gold_aggregations.py  test_schemas.py  test_silver_transformations.py
